k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xzs-exam
  labels:
    app: xzs-exam
    environment: production
