k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xzs-frontend-service
  namespace: xzs-exam
  labels:
    app: xzs-frontend
spec:
  type: ClusterIP
  selector:
    app: xzs-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
