k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xzs-mysql
  namespace: xzs-exam
  labels:
    app: xzs-mysql
spec:
  type: ClusterIP
  selector:
    app: xzs-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
